--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jvstm"/>
-	<classpathentry kind="lib" path="/specula/lib/commons-javaflow-1.0-SNAPSHOT.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/home/anusko/IST/5Ano/Tese/Code/asmTests/doc/javaflow/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/specula"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
